<resources>
    <string name="app_name">MyFamily</string>
    <string name="title">Security</string>
    <string name="msg1">SOS</string>
    <string name="text1sos">In case of emergency telling family members to contact me</string>
    <string name="guard">GUARD</string>
    <string name="text2guard">Open when you are on a potentially dangerous joureny</string>
    <string name="home_title">Home</string>
    <string name="dashboard">dashboard</string>
    <string name="profile">profile</string>
    <string name="guard_title">guard</string>
    <string name="my_family">My Family</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profile</string>
</resources>