<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_bg">



    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_20_dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/redcard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/red"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />


    <TextView
        android:id="@+id/textsos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16"
        android:elevation="20dp"
        android:text="@string/msg1"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/redcard"
        app:layout_constraintTop_toTopOf="@+id/redcard" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="20dp"
        android:text="@string/text1sos"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/imgsos"
        app:layout_constraintStart_toStartOf="@+id/redcard"
        app:layout_constraintTop_toBottomOf="@+id/textsos" />

    <ImageView
        android:id="@+id/imgsos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="23dp"
        android:src="@drawable/ic"
        app:layout_constraintBottom_toBottomOf="@id/redcard"
        app:layout_constraintEnd_toEndOf="@+id/redcard"
        app:layout_constraintTop_toTopOf="@+id/redcard" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/greencard"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/green_card"
        app:cardCornerRadius="16dp"
        app:cardElevation="@dimen/dimens_16"
        app:layout_constraintTop_toBottomOf="@+id/redcard" />


    <TextView
        android:id="@+id/textguard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="20dp"
        android:text="@string/guard"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="@+id/greencard" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="20dp"
        android:text="@string/text2guard"
        android:textColor="#fff"
        app:layout_constraintEnd_toStartOf="@+id/imgguard"
        app:layout_constraintStart_toStartOf="@+id/greencard"
        app:layout_constraintTop_toBottomOf="@+id/textguard" />

    <ImageView
        android:id="@+id/imgguard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="18dp"
        android:src="@drawable/guard"
        app:layout_constraintBottom_toBottomOf="@id/greencard"
        app:layout_constraintEnd_toEndOf="@+id/greencard"
        app:layout_constraintTop_toTopOf="@+id/greencard" />


</androidx.constraintlayout.widget.ConstraintLayout>